force-app/main/default/objects/HI_Policy__c/HI_Policy__c.object-meta.xml
<CustomObject>
    <label>HI Policy</label>
    <nameField>
        <displayFormat>POLICY-{000000000}</displayFormat>
        <label>HI Policy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HI Policies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>