force-app/main/default/objects/HI_Policy__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>