force-app/main/default/objects/HI_Policy__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>The external record ID from the source system, policy.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>HI Policy Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>