force-app/main/default/objects/HI_Policy__c/fields/Plan_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Plan_Document_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Document Link</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>