force-app/main/default/objects/HI_Policy__c/fields/Policy_Detail_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Detail_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Detail Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>