force-app/main/default/objects/HI_Policy__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>